--- a/css/styles.css
+++ b/css/styles.css
@@ -22,15 +22,17 @@
 
 @media only screen and (min-width:80px) and (max-width:420px) {
     #skillset{
-        grid-template-columns: repeat(2, 1fr); 
-        padding-bottom: 50%;
+        width:40%;
         margin:auto;
+        grid-template-columns: repeat(2, 1fr); 
+        padding-bottom: 55%;
+        
     }
 }
 @media only screen and (min-width:421px) and (max-width:720px) {
     #skillset{
         grid-template-columns: repeat(3, 1fr);  
-        padding-bottom: 18%;
+        padding-bottom: 20%;
         margin:auto;
     }
 }
